add face detector

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,23 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        externalNativeBuild {
-            cmake {
-                cppFlags "-std=c++11 -frtti -fexceptions"
-                abiFilters 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'mips', 'mips64'
-            }
-        }
+//        externalNativeBuild {
+//            cmake {
+//                cppFlags "-std=c++11 -frtti -fexceptions"
+//                abiFilters 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'mips', 'mips64'
+//            }
+//        }
+    }
+    task ndkBuild(type: Exec, description: 'Compile JNI source via NDK'){
+        commandLine "C:/Users/trach/AppData/Local/Android/sdk/ndk-bundle/ndk-build.cmd",
+                'NDK_PROJECT_PATH=build/intermediates/ndk',
+                'NDK_LIBS_OUT=src/main/jniLibs',
+                'APP_BUILD_SCRIPT=src/main/jni/Android.mk',
+                'NDK_APPLICATION_MK=src/main/jni/Application.mk'
+    }
+
+    tasks.withType(JavaCompile){
+        compileTask -> compileTask.dependsOn ndkBuild
     }
     buildTypes {
         release {
@@ -28,12 +39,19 @@ android {
     }
     sourceSets {
         main {
-            jniLibs.srcDirs = ['G:\\Opensource\\hideapp\\opencvdetectface\\app\\src\\main\\jniLibs']
+            jniLibs.srcDirs = [] //'G:\Opensource\hideapp\opencvdetectface\app\src\main\jniLibs'
+            //disable automatic when ndk-build call
         }
     }
+
+//    externalNativeBuild {
+//        cmake {
+//            path "CMakeLists.txt"
+//        }
+//    }
     externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt"
+        ndkBuild {
+            path 'src/main/jni/Android.mk'
         }
     }
 }
